@@ -2456,6 +2456,7 @@
     <None Include="Tests\Scripting\Fields.x3d" />
     <None Include="Tests\Handles\PointLight.x3dv" />
     <None Include="Tests\Handles\GridTool.x3dv" />
+    <None Include="Tests\Handles\x3d.jpeg" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tests\Errors\" />
