@@ -1,5 +1,11 @@
 2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Light.svg:
+	* BrowserWindow.xml:
+	* Geometry.svg: 
+
+2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DTexture2DNodeEditor.cpp:
 	* TextureEditorPreview.x3dv: 
 
