@@ -1,5 +1,10 @@
 2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Library.mdproj:
+	* x3d.jpeg: 
+
+2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* OutlineEditor.x3d: 
 
 2014-08-08  Holger Seelig  <holger.seelig@yahoo.de>
